<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Main2Activity_Quiz1">

    <ImageView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:layout_above="@+id/bottom_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/topbar"
        android:contentDescription="@string/description" />

    <ImageView
        android:id="@+id/bottom_bar"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/btnanswer"
        android:contentDescription="@string/description" />


    <TextView
        android:id="@+id/textView_vidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:text="@string/et_vidas"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="20dp"
        android:text="@string/et_jugador"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_nombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="0dp"
        android:text="@string/jugador"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="60dp"
        android:text="@string/total_score"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/tresvidas" />

    <TextView
        android:id="@+id/label"
        android:layout_width="355dp"
        android:layout_height="wrap_content"


        android:layout_alignTop="@+id/bottom_bar"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/label_pregunta"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_question"
        android:layout_width="353dp"
        android:layout_height="105dp"
        android:layout_alignStart="@+id/bottom_bar"
        android:layout_alignLeft="@+id/bottom_bar"
        android:layout_alignTop="@+id/bottom_bar"
        android:layout_alignBottom="@+id/bottom_bar"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/description"
        android:gravity="center"

        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="3dp"
        android:text="@string/score"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn-skip"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/darker_gray"
        android:text="@string/btn_skip"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn-check"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_check"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/respuestas"
        android:layout_width="381dp"
        android:layout_height="144dp"
        android:layout_below="@+id/bottom_bar"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="16dp">
        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/btnanswer"
            android:text="RadioButton"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/btnanswer"
            android:text="RadioButton"
            android:textColor="@android:color/background_light" />

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@drawable/btnanswer"
            android:text="RadioButton"
            android:textColor="@android:color/background_light" />
    </RadioGroup>


</RelativeLayout>