<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Main2Activity_Login">

    <ImageView
        android:id="@+id/hammurabi"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/hammurabi" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn-check"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textView_record"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="17dp"

        android:layout_marginLeft="17dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="61dp"

        android:background="@color/colorAccent"
        android:onClick="Jugar"
        android:shadowColor="#515151"
        android:shadowDx="7"
        android:shadowDy="6"
        android:shadowRadius="5"
        android:text="@string/btn_jugar"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        tools:text="@string/btn_jugar" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="380dp"
        android:layout_height="50dp"

        android:layout_alignBottom="@+id/textView_record"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/input_usuario"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_record"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="0dp"
        android:background="@drawable/record"
        android:contentDescription="@string/description"
        android:gravity="center"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_dark"
        android:textSize="18sp" />
</RelativeLayout>